force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/CVRD_DS_Application_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application_Sub_Type__c</fullName>
    <label>Application Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_Sub_Type</valueSetName>
    </valueSet>
</CustomField>