force-app/main/default/objects/MUSW__Master_Fee_List__c/recordTypes/MUSW__Administration_Fee.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Administration_Fee</fullName>
    <active>true</active>
    <label>Administration Fee</label>
</RecordType>